<resources>
    <string name="app_name">Beacon</string>
    <string name="home">Home</string>
    <string name="contacts">Contacts</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="incoming_requests_home_title">Received Contact Requests</string>
    <string name="requests_string">Requests</string>
    <string name="in_supply_string">In Supply</string>
    <string name="out_of_supply_string">Out of Supply</string>
    <string name="supplier_list_string">Supplier List</string>
    <string name="supplier_beacons_string">Active Supplier Beacons</string>
    <string name="demand_on_string">In Demand</string>
    <string name="demand_off_string">Out of Demand</string>
    <string name="supply_status_text">supply status</string>
    <string name="demand_status_text">demand status</string>
    <string name="supply_status_on_text">Contacts are being notified you have supply </string>
    <string name="supply_status_off_text">Contacts are being notified you have no supply </string>
    <string name="demand_status_on_text">Contacts are being notified you are in demand </string>
    <string name="demand_status_off_text">Contacts are being notified you are not in demand </string>
    <string name="login_main_string">Welcome to Beacon!</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button_text">Log In</string>
    <string name="create_account_button_text">Create Account</string>
    <string name="add_contact_button_text">Add New Contact</string>
    <string name="contact_name_title">Contact Username</string>
    <string name="submit_contact_request_text">Submit Contact Request</string>
    <string name="contact_user_name_hint">username</string>
    <string name="adding_contact_progress_bar_text">Submitting Request...</string>
    <string name="direction_to">To:</string>
    <string name="request_status_pending">Pending</string>
    <string name="request_username_default">defaultUserName</string>
    <string name="outgoing_request_action_button_cancel_text">Cancel</string>
    <string name="outgoing_request_action_button_confirm_text">Confirm</string>
    <string name="outgoing_request_action_button_clear_text">Clear</string>
    <string name="direction_from">From:</string>
    <string name="incoming_request_decline_button_text">Decline</string>
    <string name="incoming_request_accept_button_text">Accept</string>
    <string name="incoming_requests_title_text">Received Contact Requests</string>
    <string name="outgoing_requests_title_text">Sent Contact Requests</string>
    <string name="outgoing_requests_home_title">Sent Contact Requests</string>
    <string name="login_secondary_string">The social marketing platform where you are in control of your personal data.</string>
    <string name="welcome_primary_back_button_text">Back</string>
    <string name="welcome_primary_next_button_text">Next</string>
    <string name="welcome_primary_first_card">On Beacon we do not sell your personal data, you do, if you choose too.</string>
    <string name="welcome_primary_second_card">On Beacon, unlike other social media platforms, advertisers pay YOU for the marketing information you provide.\n\n
    Participation in surveys and visiting sponsored links nets you points to trade in for cash and prizes!</string>
    <string name="welcome_primary_third_card">And of course you can connect and chat with friends!</string>
    <string name="edit_profile_instructions">Please fill out a complete marketing profile of yourself!</string>
    <string name="edit_marketing_instructions">Set which marketing data you provide when clicking sponsors or taking surveys.  Below you can see the points you earn based on the information you give out!</string>
    <string name="edit_profile_first_name_text">First Name</string>
    <string name="edit_profile_last_name_text">Last Name</string>
    <string name="edit_profile_email_text">Email</string>
    <string name="edit_profile_birthday_text">Birthday</string>
    <string name="edit_profile_city_text">City</string>
    <string name="edit_profile_state_text">State</string>
    <string name="edit_profile_next_button_text">Next</string>
    <string name="edit_profile_back_button_text">Back</string>
    <string name="points_per_survey_text_string">Points earned per survey</string>
    <string name="points_per_sponsor_text_string">Points earned on first visit to sponsor site</string>
    <string name="edit_profile_button_text">Edit Profile</string>
    <string name="points_total_text">Points: </string>
    <string name="home_rewards_title">Rewards Catalog</string>
    <string name="surveys_card_title">Available Surveys</string>
    <string name="profile_picture_title_text">Profile Picture</string>
    <string name="profile_picture_disclaimer_text">Profile pictures are never shared with advertisers!</string>
    <string name="no_contacts_text">You have no contacts!</string>
    <string name="sponsors">Sponsors</string>
    <string name="available_surveys_title_text">Available Surveys</string>
    <string name="individual_survey_cancel_button_text">Cancel</string>
    <string name="individual_survey_submit_button_text">Submit</string>
    <string name="edit_profile_geolocation_text">Geolocation</string>
    <string name="edit_marketing_submit_button_text">Submit</string>
    <string name="edit_marketing_back_button_text">Back</string>
    <string name="edit_marketing_state_text">State</string>
    <string name="edit_marketing_city_text">City</string>
    <string name="edit_marketing_birthday_text">Birthday</string>
    <string name="edit_marketing_last_name_text">Last Name</string>
    <string name="edit_marketing_first_name_text">First Name</string>
    <string name="edit_marketing_geolocation_text">Geolocation</string>
    <string name="edit_marketing_email_text">Email</string>

</resources>
