<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <android.support.v7.widget.CardView
        android:id="@+id/first_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/welcome_primary_first_card"/>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/second_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/first_card"
        android:layout_margin="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/welcome_primary_second_card"/>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/third_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/second_card"
        android:layout_margin="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/welcome_primary_third_card"/>

    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:gravity="bottom"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/welcome_primary_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_primary_back_button_text" />

        <Button
            android:id="@+id/welcome_primary_next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_primary_next_button_text" />

    </LinearLayout>

</RelativeLayout>